--- a/index[1].html
+++ b/index[1].html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./font-awesome.min[1].css">
+  <link rel="stylesheet" href="../../../font-awesome.min[1].css">
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
     media="screen" charset="utf-8">
@@ -189,20 +189,20 @@
           </div><!-- end-header -->
           <br class="clear">
 
-      <div class="row">
-        <div class="col-12">
-          <nav role="navigation" id="nav">
-            <input class="trigger" type="checkbox" id="mainNavButton">
-            <label for="mainNavButton" onclick>Menu</label>
-            <ul>
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./index[1].html">About Us</a></li>
-              <li><a href="./membership.html">Products</a></li>
-              <li><a href="./news.html">Blog</a></li>
-              <li><a href="./starter-page.html">Specials</a></li>
-              <li><a href="./welcome.html">Contact</a></li>
-            </ul>
-          </nav>
+          <div class="row">
+              <div class="col-12">
+                  <nav role="navigation" id="nav">
+                      <input class="trigger" type="checkbox" id="mainNavButton">
+                      <label for="mainNavButton" onclick>Menu</label>
+                      <ul>
+                          <li><a href="./index.html">Home</a></li>
+                          <li><a href="./index[1].html">About Us</a></li>
+                          <li><a href="./membership.html">Products</a></li>
+                          <li><a href="./news.html">Blog</a></li>
+                          <li><a href="./starter-page.html">Specials</a></li>
+                          <li><a href="./welcome.html">Contact</a></li>
+                      </ul>
+                  </nav>
         </div><!-- col-12 -->
       </div><!-- end-.row -->
 
