--- a/index[1].html
+++ b/index[1].html
@@ -47,7 +47,7 @@
   <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./font-awesome.min[1].css">
+  <link rel="stylesheet" href="./font-awesome.min.css">
 
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
