--- a/index[1].html
+++ b/index[1].html
@@ -11,7 +11,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- slide_show -->
+  <!-- slide_show --
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8"/>	
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
   
@@ -42,7 +42,7 @@
   <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css"
     media="screen" charset="utf-8">
-
+        -->
   <link rel="stylesheet" href="./style[1].css">
   <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
