--- a/index[1].html
+++ b/index[1].html
@@ -11,6 +11,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+  
   <!-- slide_show --
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8"/>	
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
@@ -47,7 +53,7 @@
   <link rel="stylesheet" href="./nav[1].css">
   <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./font-awesome.min.css">
+  <link rel="stylesheet" href="../orris0/CSS/font-awesome.min.css">
 
   <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
