--- a/index[1].html
+++ b/index[1].html
@@ -11,11 +11,18 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./css/base.css" type="text/css" media="screen" charset="utf-8" />
   <link rel="stylesheet" href="./lightbox.css" type="text/css" media="screen" charset="utf-8" />
   <!-- 01_lightbox -->
+
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8"/>	
+  <link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+	<!-- 02_colorbox -->
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="script.js"></script>
+  <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="./js/script.js"></script>
+  
+  
   
   <!-- slide_show --
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8"/>	
