--- a/index[1].html
+++ b/index[1].html
@@ -16,10 +16,10 @@
   <!-- 01_lightbox -->
 
   <link rel="stylesheet" href="./css/base.css" type="text/css" media="screen" charset="utf-8"/>	
-  <link rel="stylesheet" href="colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+  <link rel="stylesheet" href="./CSS/css/  /Css/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
 	<!-- 02_colorbox -->
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/script.js"></script>
   
   
