--- a/index[1].html
+++ b/index[1].html
@@ -11,7 +11,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
   <!-- 01_lightbox -->
 
