--- a/index[1].html
+++ b/index[1].html
@@ -20,7 +20,7 @@
 	<!-- 02_colorbox -->
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="./js/script.js"></script>
+  <script type="text/javascript" src="./js/scripts.js"></script>
   
   
   
@@ -465,8 +465,7 @@
      <script src="../orris0/images/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./scripts.js"></script>
     <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073"
-        crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
 
 </body>
 
