--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="../orris0/CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="../../orris0/jQuery-novice-to-ninja/chapter_04/01_lightbox/lightbox.css" type="text/css" media="screen" charset="utf-8">
         <!-- Core theme CSS (includes Bootstrap)-->
-        <!-- Optional Metadata -->
+        <!-- Optional Metadata --
         <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     
 		<!-- Name of web application (only should be used if the website is used as an app) -->
