--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="icon" type="image/png" href="./flexy-logo.png">
-        <link rel="stylesheet" href="../jQuery-novice-to-ninja/css/base.css" type="text/css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="./style[1].css">
         <link rel="stylesheet" href="./nav[1].css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
