--- a/index[1].html
+++ b/index[1].html
@@ -455,7 +455,7 @@
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/script.js"></script>
 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
     
     <script src="./js/bootstrap.bundle.js.map"></script>
     
