--- a/index[1].html
+++ b/index[1].html
@@ -19,8 +19,8 @@
   <link rel="stylesheet" href="../../orris0/orris0/CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
 	<!-- 02_colorbox -->
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="./js/scripts.js"></script>
+  <script src="../orris0/js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="../orris0/js/scripts.js"></script>
   
   
   
