--- a/index[1].html
+++ b/index[1].html
@@ -452,8 +452,9 @@
   </div><!-- end-container -->
 
   <!-- 01_lightbox -->
-  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../orris0/  lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="./js/script.js"></script>
+  <script type="text/javascript" src="./js/scripts.js"></script>
 
   <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
     
