--- a/index[1].html
+++ b/index[1].html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <html ng-app lang="en">
 
 <head profile="http://www.w3.org/2005/10/profile">
@@ -11,10 +11,10 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="./CSS/lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="./css-jq/lightbox.css" type="text/css" media="screen" charset="utf-8" />
   <!-- 01_lightbox -->
-  <link rel="stylesheet" href="../orris0/CSS/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
+  <link rel="stylesheet" href="../orris0/css-jq/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
 	<!-- 02_colorbox -->
   <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
@@ -23,7 +23,7 @@
   
   
   <!-- slide_show --
-  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8"/>	
+  <link rel="stylesheet" href="../../css-jq/base.css" type="text/css" media="screen" charset="utf-8"/>	
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
   
 	<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
