--- a/index[1].html
+++ b/index[1].html
@@ -11,20 +11,20 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-  <link rel="stylesheet" href="./css-jq/lightbox.css" type="text/css" media="screen" charset="utf-8" />
+  <link rel="stylesheet" href="../orris0/css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="../orris0/css-jq/lightbox.css" type="text/css" media="screen" charset="utf-8" />
   <!-- 01_lightbox -->
   <link rel="stylesheet" href="../orris0/css-jq/colorbox.css" type="text/css" media="screen" charset="utf-8"/>
 	<!-- 02_colorbox -->
-  <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="./js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="./js/scripts.js"></script>
+  <script src="../orris0/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../orris0/js/jquery.colorbox-min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="../orris0/js/scripts.js"></script>
   
   
   
   <!-- slide_show --
   <link rel="stylesheet" href="../../css-jq/base.css" type="text/css" media="screen" charset="utf-8"/>	
-	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8"/>
+	<link rel="stylesheet" href="../orris0/css-js/style.css" type="text/css" media="screen" charset="utf-8"/>
   
 	<script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" ></script>
 	<script type="text/javascript" src="script.js"></script>
@@ -462,7 +462,7 @@
     <script type="text/javascript" src="./js/jquery-1.7.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>
      <script src="./images/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="./js/scripts.js"></script>
+  <script type="text/javascript" src="../orriso/js/scripts.js"></script>
     <!-- <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script> -->
 
