--- a/index[1].html
+++ b/index[1].html
@@ -7,7 +7,7 @@
   <!--
         The following 2 meta tags *must* come first in the <head> to consistently ensure proper document rendering. Any other head element should come *after* these tags.
         -->
-  <!-- meta details go here -- Set character encoding for the document -->
+  <!-- meta details go here -- Set character encoding for the document --
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
