--- a/index[1].html
+++ b/index[1].html
@@ -11,6 +11,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <!-- Viewport for responsive web design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- document ready -->
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+<!-- document ready -->
   <link rel="stylesheet" href="../orris0/css-jq/base.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="../orris0/css-jq/lightbox.css" type="text/css" media="screen" charset="utf-8" />
   <!-- 01_lightbox -->
@@ -459,6 +464,12 @@
     <script src="./js/bootstrap.bundle.js.map"></script>
     
     <!--jQuery JS-->
+	<!-- document ready -->
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+
+	
     <script type="text/javascript" src="../orris0/js/jquery-1.7.js"></script>
     <script type="text/javascript" src="../orris0/js/script.js"></script>
      <script src="./images/lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
