--- a/index[1].html
+++ b/index[1].html
@@ -15,7 +15,14 @@
   <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
   <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script type="text/javascript" src="script.js"></script>
-<!-- document ready -->
+	
+<!-- selecting -->
+  <link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />  
+  <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript" src="script.js"></script>
+
+<!-- selecting -->
+	
   <link rel="stylesheet" href="../orris0/css-jq/base.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="../orris0/css-jq/lightbox.css" type="text/css" media="screen" charset="utf-8" />
   <!-- 01_lightbox -->
