--- a/services.html
+++ b/services.html
@@ -301,6 +301,340 @@
                 </ul>
                 </div>
 	            </div><!-- end col-12 -->
+				<div class="data" id="#html5style2content">
+    <div class="row">
+      <div class="çol-12" padding="2%">
+        <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
+      </div><!-- end-col-12 -->
+    </div><!-- end-row -->
+    <!-- <div class="data" id="#html5style2content"> -->
+      <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+      <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
+        <div class="çol-12">
+          <img src="img/paper.png" ;>
+
+          <div class="data" id="html5style2leftcol">
+            <h3>Cottages, converted barns, caravans</h3>
+            <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+            <br>The superb interior of one of our cottages
+          </div>
+
+          <nav class="data" id="html5style2nav"><!--use the semantic tag <nav>-->
+            <ul><!--start of menu list-->
+              <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+              <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+              <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+              <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+              <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+            </ul><!--end of menu list-->
+          </nav>
+
+          <!--</div> removed and replaced with </nav>-->
+          <div class="data" id="html5style2midcol">
+            <h3>Situated in the BDA's beautiful countryside</h3>
+            <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+          </div>
+
+        </div><!-- end-col-12 -->
+      </div> <!-- end class row -->
+
+      <div class="row" style="background-color: #F6931E;">
+        <div class="col-11">
+          <h2>Get ready for take off.</h2>
+          <div class="data" id="navigation">
+
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Buy Now!</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Gift Ideas</a></li>
+            </ul>
+          </div>
+
+          <header class="data" id="gallerypageheader">
+            <h1>A full page roll-over gallery of greetings cards</h1>
+            <h2>Hover the mouse over a small picture to see an enlarged version</h2>
+          </header>
+          <nav class="data" id="gallerypagenav">
+            <ul>
+              <li class="btn"><a href="#">Page Two</a></li>
+              <li class="btn"><a href="#">Page Three</a></li>
+              <li class="btn"><a href="#">Page Four</a></li>
+              <li class="btn"><a href="#">Home Page</a></li>
+            </ul>
+          </nav>
+          <br class="clear">
+          <div class="data" id="gallerypagerightcol">
+            <h4> StarTrackr</h4>
+            <br><br>
+            <p>
+              <a href="http://validator.w3.org/check?uri=referer"><img
+                  src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5"
+                  title="Validated HTML5"></a>
+            </p>
+            <p>
+              <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31"
+                  title="Valid CSS!" alt="Valid CSS!"></a>
+              <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
+            </p>
+            <br class="clear">
+            <p class="advert">Web Design by Orris Baker</p>
+          </div>
+          <br class="clear">
+          <div class="data" id="gallerypagemidcol">
+            <div class="data" id="gallerypagegallery-block">
+              <ul id="gallerypagecol-1">
+                <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid"
+                      src="images/alibig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid"
+                      src="images/catbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid"
+                      src="images/beachbig.jpg" alt=""></a></li>
+              </ul>
+              <ul id="gallerypagecol-2">
+                <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid"
+                      src="images/fernsbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid"
+                      src="images/nicobig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img
+                      class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
+              </ul>
+              <ul id="gallerypagecol-3">
+                <li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern"
+                      title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid"
+                      src="images/felixbig.jpg" alt=""></a></li>
+                <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid"
+                      src="images/cliffbig.jpg" alt=""></a></li>
+              </ul><br class="clear">
+            </div><!--gallery block closed-->
+          </div><!--midcol closed-->
+
+          <p id="intro">
+            Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.
+            Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
+            You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
+          </p>
+        </div><!-- end col-11 -->
+      </div> <!-- end class row -->
+
+      <div class="row" style="background-color: #F6931E;">
+        <div class="col-11">
+			<ul id="gallery-3col-mix">
+					<li><a href="#"><img src="images/alithumb.jpg" title="Ali" alt="Ali">
+							<img class="hid" src="images/alilarge.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/catthumb.jpg" title="Cat" alt="Cat">
+							<img class="hid" src="images/catlarge.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/beachthumb.jpg" title="Baech" alt="Beach">
+							<img class="hid" src="images/beachlarge.jpg" alt=""></a>
+					</li>
+				</ul>
+				<ul id="gallery-2col">
+					<li><a href="#"><img src="images/childrenthumb.jpg" title="Children" alt="Children">
+							<img class="hid" src="images/childrenbig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/seathumb.jpg" title="Seascape" alt="Seascape">
+							<img class="hid" src="images/seabig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/take-cardthumb.jpg" title="Take a card" alt="Take a card">
+							<img class="hid" src="images/take-cardbig.jpg" alt=""></a>
+					</li>
+				</ul>
+				<ul id="gallery-3col-mix">
+					<li><a href="#"><img src="images/walesthumb.jpg" title="Wales" alt="Wales">
+							<img class="hid" src="images/walesbig.jpg" alt=""></a>
+					</li>
+					<li><a href="#"><img src="images/pensthumb.jpg" title="Chelsea pensioners" alt="Chelsea pensioners">
+							<img class="hid" src="images/pensbig.jpg" alt=""></a>
+					</li>
+				</ul>
+          <p id="no-script">
+            We recommend that you have JavaScript enabled!
+          </p>
+        </div><!-- end col-11 -->
+        <div class="col-3">
+          <img class="circle" src="img/orange-globe.png">
+          <p id="disclaimer">
+            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like
+            people so their privacy should be respected.
+          </p>
+        </div> <!-- end col-3 -->
+      </div> <!-- end class row -->
+
+      <div class="row" style="background-color: #1abc9c;">
+        <div class="col-10">
+          <h2>We're flying around the globe</h2>
+          <div id="news">
+            <h2>Latest News</h2>
+            <p>
+              Which member of the seminal calypso/lectro band <em>C&amp;C Music Sweatshop</em> was spotted last night
+              at <em>Dirt</em>, the trendy New York restaurant that serves only food caught and retrieved by the
+              chef's own hands?
+              <span class="spoiler">Yes! It's the ever-effervescent, <em>Glendatronix</em>!</span>
+            </p>
+            <p>Who lost their recording contract today? <span class="spoiler">The Zaxntines!</span></p>
+          </div>
+        </div>
+        <div class="col-3">
+          <img id="waves" class="circle" src="images/waves.png">
+        </div><!-- end col-3 -->
+      </div>
+
+      <div class="row" style="background-color: #e5ef3f;">
+        <div class="col-9">
+          <h2>Above the clouds &amp; over the sea.</h2>
+          <div>
+            <h2 class="heading">Our Celebrities</h2>
+            <p class="info">
+              We have an ever changing roster of newly chipped celebrities. But it can take as little as a week for
+              the little critters to realise they've been tagged - so you have to be fast!
+            </p>
+            <table class="data" id="celebs">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Name</th>
+                  <th>Occupation</th>
+                  <th>Approx. Location</th>
+                  <th>Price</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>203A</td>
+                  <td>Johny Stardust (<a href="bio.pdf">bio</a>)</td>
+                  <td>Front-man</td>
+                  <td>Los Angeles</td>
+                  <td>$39.95</td>
+                </tr>
+                <tr>
+                  <td>141B</td>
+                  <td>Beau Dandy (<a href="img.jpg">pic</a>,<a href="bio.pdf">bio</a>)</td>
+                  <td>Singer</td>
+                  <td>New York</td>
+                  <td>$39.95</td>
+                </tr>
+                <tr>
+                  <td>2031</td>
+                  <td>Mo' Fat (<a href="img.jpg">pic</a>)</td>
+                  <td>Producer</td>
+                  <td>New York</td>
+                  <td>$19.95</td>
+                </tr>
+                <tr>
+                  <td>007F</td>
+                  <td>Kellie Kelly (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                  <td>Singer</td>
+                  <td>Omaha</td>
+                  <td>$11.95</td>
+                </tr>
+                <tr>
+                  <td>8A05</td>
+                  <td>Darth Fader (<a href="img.jpg">pic</a>)</td>
+                  <td>DJ</td>
+                  <td>London</td>
+                  <td>$19.95</td>
+                </tr>
+                <tr>
+                  <td>6636</td>
+                  <td>Glendatronix (<a href="bio.pdf">bio</a>,<a href="w.doc">press</a>)</td>
+                  <td>Keytarist</td>
+                  <td>London</td>
+                  <td>$39.95</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="col-3">
+            <img id="plane" class="circle" src="images/plane.png">
+          </div><!-- end col-3 -->
+        </div>
+      </div>
+
+      <div class="row" style="background-color: #34495e;">
+        <div class="col-8">
+          <h2>Fine Print In just 42 hours and 27 minutes</h2>
+
+          <p id="fine_print">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.
+          </p>
+
+          <div id="comment">
+            <h2>Leave a comment</h2>
+            name:<br>
+            <input type="text"><br>
+            comment:<br>
+            <textarea rows="5" cols="30" name="comment"></textarea>
+          </div>
+        </div><!-- end col-8 -->
+        <div class="col-3">
+          <img id="paper-blue" class="circle" src="images/paper-blue.png">
+        </div><!-- end col-3 -->
+      </div><!-- en.row -->
+
+
+      <div class="row" style="background-color: #00afe1;">
+        <div class="col-7">
+          <h2>So come along for the ride!</h2>
+          <h3>Around town last night</h3>
+          <div id="photos">
+            <a href="#" class="trigger">Image Gallery</a>
+            <ul id="photos_inner">
+              <li><img alt="Glendatronix" src="./images/glenda_400.jpg" /></li>
+              <li><img alt="Darth Fader" src="./images/fader_400.jpg" /></li>
+              <li><img alt="Beau Dandy" src="./images/beau_400.jpg" /></li>
+              <li><img alt="Johnny Stardust" src="./images/johnny_400.jpg" /></li>
+              <li><img alt="Mo' Fat" src="./images/mofat_400.jpg" /></li>
+              <li><img alt="Glendatronix" src="./images/kellie_400.jpg" /></li>
+              <li><img alt="Darth Fader" src="./images/fader_400.jpg" /></li>
+              <li><img alt="Beau Dandy" src="./images/beau_400.jpg" /></li>
+              <li><img alt="Johnny Stardust" src="./images/johnny_400.jpg" /></li>
+              <li><img alt="Mo' Fat" src="./images/mofat_400.jpg" /></li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <img id="globe" class="circle" src="images/globe.png" width="215px">
+          </div>
+        </div>
+      </div>
+      <div class="row" style="background-color: #00AFE1;">
+        <div class="col-12">
+          <img id="plane-background" src="./img/plane-background.png" width="935px">
+        </div>
+      </div>
+
+      <div class="row" style="background-color: #66d4ff">
+        <div class="col-12">
+          <h2>Follow Us</h2>
+        </div>
+        <div id="comment">
+          <h2>Leave a comment</h2>
+          name:<br>
+          <input type="text"><br>
+          comment:<br>
+          <textarea rows="5" cols="30" name="comment"></textarea>
+        </div>
+      </div>
+
+      <div class="row" style="background-color: 66d4ff">
+        <div class="col-12">
+          <h2>Fine Print</h2>
+          <p id="fine_print">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+    </div> <!-- end-content-->
 	            <div id="content">
                 <b>Practical HTML5 Projects for fun and Profit</b>
                 <div class="picture">
