--- a/membership.html
+++ b/membership.html
@@ -152,7 +152,7 @@
             </header>
 			
 		    <div class="data" id="html5-ch1-7content">
-                <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                <h2>Practical HTML5 Projects for fun and Profit!</h2>
             
                 <div class="row">
                     <div class="col-12">
@@ -180,7 +180,7 @@
 		              
 		        <div class="row">
                     <div class="çol-12" padding="2%">
-                        <h2 class="dark" id="html5-ch1-7h2">Practical HTML5 Projects for fun and Profit!<br>Award winning accommodation, self catering or bed and breakfast</h2>
+                        <h2 class="dark" id="html5-ch1-7h2">Welcome to <strong>StarTrackr!</strong> </h2>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				<!--
@@ -220,7 +220,7 @@
 
       <div class="row" style="background-color: #F6931E;">
         <div class="col-11">
-          <h2>Get ready for take off.</h2>
+          <h2>Get ready for take off.</h2><br>
           <div class="data" id="navigation">
 
             <ul>
@@ -232,7 +232,7 @@
           </div>
 
           <p id="intro">
-            Welcome to <strong>StarTrackr!</strong> the planet's premier celebrity tracking and monitoring service.
+            <!-- Welcome to <strong>StarTrackr!</strong> --> The planet's premier celebrity tracking and monitoring service.
             Need to know where in the world the best bands, musicians or producers are within 2.2 square meters?
             You've come to the right place. We have a very special special on B-grade celebs this week, so hurry in!
           </p>
